--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "cyrillic-to-translit-js": "^3.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
