--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 # temp
-/src
+/src/kit
 # custom
 server/config/
 !server/config/example_default.json
