--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
     "bootstrap": "4.6.0",
     "classnames": "2.2.6",
     "headroom.js": "0.12.0",
+    "lodash": "^4.17.21",
     "moment": "2.29.1",
     "node-sass": "5.0.0",
     "nouislider": "14.6.4",
-    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "query-string": "^4.3.4",
     "react": "17.0.2",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "react-redux": "^7.2.5",
     "react-photoswipe-gallery": "1.3.4",
+    "react-redux": "^7.2.5",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "4.3.0",
-    "reactstrap": "8.9.0"
+    "reactstrap": "8.9.0",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
