--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "4.3.0",
+    "react-toastify": "^8.1.0",
     "reactstrap": "8.9.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
