--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "4.0.3",
     "react-select": "4.3.0",
     "react-toastify": "^8.1.0",
+    "react-use-cart": "^1.13.0",
     "reactstrap": "8.9.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
