--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-photoswipe-gallery": "1.3.4",
     "react-redux": "^7.2.5",
+    "react-router-breadcrumbs-hoc": "^4.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "4.3.0",
