--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.24.0",
     "bootstrap": "4.6.0",
     "classnames": "2.2.6",
+    "cyrillic-to-translit-js": "^3.1.0",
     "headroom.js": "0.12.0",
     "lodash": "^4.17.21",
     "moment": "2.29.1",
