--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "reactstrap": "8.9.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
+    "string-sanitizer": "^2.0.2",
     "yup": "^0.32.11"
   },
   "scripts": {
