--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,10 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.7"
+    "moment": "^2.29.1",
+    "mongoose": "^6.0.7",
+    "multer": "^1.4.4",
+    "string-sanitizer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
