--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "config": "^3.3.6",
     "cors": "^2.8.5",
