--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "chalk": "^4.1.2",
     "config": "^3.3.6",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "cyrillic-to-translit-js": "^3.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
