--- a/client/package.json
+++ b/client/package.json
@@ -3,33 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
-    "axios": "^0.24.0",
+    "@reduxjs/toolkit": "1.7.1",
+    "axios": "0.24.0",
     "bootstrap": "4.6.0",
     "classnames": "2.2.6",
-    "cyrillic-to-translit-js": "^3.1.0",
+    "cyrillic-to-translit-js": "3.1.0",
     "headroom.js": "0.12.0",
-    "history": "^4.9.0",
-    "lodash": "^4.17.21",
+    "history": "4.9.0",
+    "lodash": "4.17.21",
     "moment": "2.29.1",
     "node-sass": "5.0.0",
     "nouislider": "14.6.4",
-    "prop-types": "^15.7.2",
-    "query-string": "^4.3.4",
+    "prop-types": "15.7.2",
+    "query-string": "4.3.4",
     "react": "17.0.2",
     "react-datetime": "3.0.4",
     "react-dom": "17.0.2",
     "react-photoswipe-gallery": "1.3.4",
-    "react-redux": "^7.2.6",
-    "react-router-breadcrumbs-hoc": "^4.1.0",
+    "react-redux": "7.2.6",
+    "react-router-breadcrumbs-hoc": "4.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "4.3.0",
-    "react-toastify": "^8.1.0",
-    "react-use-cart": "^1.13.0",
+    "react-toastify": "8.1.0",
+    "react-use-cart": "1.13.0",
     "reactstrap": "8.9.0",
-    "string-sanitizer": "^2.0.2",
-    "yup": "^0.32.11"
+    "string-sanitizer": "2.0.2",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
