--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,4 +1,4 @@
 {
-  "apiEndPoint": "http://161.97.167.216:1500/api/",
+  "apiEndPoint": "https://mern.aleksandrl.ru/api/",
   "adminCredentials": {"email": "admin@holodos.com", "password": "admin1"}
 }
