--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -2,6 +2,8 @@ name: Docker-deploy
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**/README.md'
 jobs:
   docker-deploy:
     runs-on: self-hosted
